# openmc_data_downloader

./: .gitignore  CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: anaconda-publish.yml  black.yml  conda-build-test.yml  docker_ci_main.yml
conda/: meta.yaml
openmc_data_downloader/: __init__.py  cross_sections_directory.py  openmc_data_downloader  openmc_nuc_data_downloader.py  utils.py
src/openmc_data_downloader/: __init__.py  cross_sections_directory.py  nndc_7.1_cross_sections.xml  openmc_data_downloader  tendl_2019_cross_sections.xml  terminal_cmd.py  utils.py
tests/: materials.xml  test_command_line_usage.py  test_cross_sections_directory.py  test_downloader.py  test_functions.py  test_usage_with_openmc.py  test_use_in_openmc.py  test_use_in_openmc.py~HEAD
