[metadata]
name = openmc_data_downloader
version = attr: openmc_data_downloader.__version__
author = The openmc_data_downloader Development Team
author_email = mail@jshimwell.com
description = A tool for selectively downloading h5 files for specified isotopes / elements from your libraries of choice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openmc-data-storage/openmc_data_downloader
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/openmc-data-storage/openmc_data_downloader
    Tracker = https://github.com/openmc-data-storage/openmc_data_downloader/issues

[options]
packages = find:
python_requires= >=3.7
install_requires=
    pandas
    retry
     # 'openmc' is optional for this package but is not available via pip install at the moment

[options.extras_require]
tests = 
    pytest >= 5.4.3

[flake8]
per-file-ignores = __init__.py:F401
